Fix z-index cho portfolio

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -527,6 +527,7 @@ li {
     height: 100%;
     opacity: 0;
     transition: all 0.5s;
+    z-index: 1;
 }
 
 .portfolio__item:first-child::before{
